# LinkCloud

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  settings.py  urls.py
LinkCloud/: asgi.py  settings.py  urls.py  wsgi.py
links/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
links/migrations/: 0001_initial.py  0002_link_description_link_private.py  0002_profile_languages.py  0003_link_author_id_alter_language_name_alter_link_link_and_more.py  0003_remove_profile_comments_comment.py  0004_rename_author_id_comment_author_and_more.py  0005_link_created_at_alter_link_author.py  0006_rename_private_link_is_private_remove_profile_likes_and_more.py  0007_alter_comment_author_alter_save_profile.py  0008_profile_user.py  0009_remove_link_is_reported_link_report_count.py  0010_remove_link_report_count_report.py  0011_profile_description.py
links/static/css/: styles.css
links/templates/: add_comment.html  base.html  card.html  create_link.html  filter_links.html  index.html  link_view.html  links.html  tag_language_list.html  tag_links.html  user_page.html
links/templates/registration/: login.html  register.html
