[tool.poetry]
name = "linkcloud"
version = "0.1.0"
description = ""
authors = ["vyperpunk <suloversanja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5"
djangorestframework = "^3.13.1"

psycopg = "^3.2"
python-decouple = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
